revert previous removal of sortable which broke it

--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,8 @@
                     </select>
                 </div>
             </div>
-            <div class='row'>
+
+            <div class='row' style="display:none">
                 <div class='column'>
                     <label data-locale="defaultSort">Default Sort</label>
                 </div>
@@ -197,9 +198,11 @@
                     <select class="settingsCtl" id="defaultSort" name="defaultSort">
                         <option value="last">New dials last</option>
                         <option value="first">New dials first</option>
+                        <option value="alpha">Alphabetical</option>
                     </select>
                 </div>
             </div>
+
             <div class='row' style="display:none">
                 <div class='column'>
                     <label data-locale="largeTiles">Large Tiles</label>
