--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
 <!-- new install -->
 <div class="default-content" id="noBookmarks">
-    <h1 class="default-content" data-locale="newInstall1">Get started with YASD-remix</h1>
+    <h1 class="default-content" data-locale="newInstall1">Get started with Simple Speed Dial</h1>
     <p class="default-content helpText" data-locale="newInstall2">⭐ Add sites by clicking the button below, or add
         bookmarks to the Speed Dial folder</p>
     <p class="default-content helpText" data-locale="newInstall3">✨ Dials can be modified by right-clicking on them</p>
