--- a/src/updated.html
+++ b/src/updated.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Yet Another Speed Dial Updated!</title>
+  <title>Simple Speed Dial Updated!</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -44,7 +44,7 @@
 
 <!-- Begin page content -->
 <main role="main" class="container">
-  <h2 class="mt-5">Yet Another Speed Dial has been updated to v2.0!</h2>
+  <h2 class="mt-5">Simple Speed Dial has been updated to v2.0!</h2>
 
 
   <p class="lead"><br /><strong>Just a few important changes to note:</strong></p>
@@ -54,8 +54,8 @@
   <li>The sorting of dials is now synced with the bookmarks manager. If your sorting is in reverse after the update, you can change it in the settings with the <strong>Sort</strong> option.</li>
     <br/>
   </ul>
-  <p class="lead">YASD will always be 100% free and <a href="https://github.com/conceptualspace/yet-another-speed-dial" target="_blank">open source</a>. If you find it useful, please consider <a href="https://chrome.google.com/webstore/detail/yet-another-speed-dial/imohnlganmafcmidafklgkgfgaagiohn" target="_blank">leaving a review</a> or <a href="https://github.com/sponsors/conceptualspace">sponsoring this project on GitHub</a> ❤</p>
-  <p class="lead">If you have questions or ideas to improve YASD, email me at: <a href="mailto:dev@conceptualspace.net">dev@conceptualspace.net</a></p>
+  <p class="lead">SSD will always be 100% free and <a href="https://github.com/conceptualspace/yet-another-speed-dial" target="_blank">open source</a>. If you find it useful, please consider <a href="https://chrome.google.com/webstore/detail/yet-another-speed-dial/imohnlganmafcmidafklgkgfgaagiohn" target="_blank">leaving a review</a> or <a href="https://github.com/sponsors/conceptualspace">sponsoring this project on GitHub</a> ❤</p>
+  <p class="lead">If you have questions or ideas to improve SSD, email me at: <a href="mailto:dev@conceptualspace.net">dev@conceptualspace.net</a></p>
 
 </main>
 
