remove sort and drag functions

--- a/src/updated.html
+++ b/src/updated.html
@@ -44,19 +44,7 @@
 
 <!-- Begin page content -->
 <main role="main" class="container">
-  <h2 class="mt-5">Simple Speed Dial has been updated to v2.0!</h2>
-
-
-  <p class="lead"><br /><strong>Just a few important changes to note:</strong></p>
-  <ul>
-    <li>It's now possible to <strong>Import and Export</strong> your settings and thumbnails. Look for it in the settings menu.</li>
-    <br/>
-  <li>The sorting of dials is now synced with the bookmarks manager. If your sorting is in reverse after the update, you can change it in the settings with the <strong>Sort</strong> option.</li>
-    <br/>
-  </ul>
-  <p class="lead">SSD will always be 100% free and <a href="https://github.com/conceptualspace/yet-another-speed-dial" target="_blank">open source</a>. If you find it useful, please consider <a href="https://chrome.google.com/webstore/detail/yet-another-speed-dial/imohnlganmafcmidafklgkgfgaagiohn" target="_blank">leaving a review</a> or <a href="https://github.com/sponsors/conceptualspace">sponsoring this project on GitHub</a> ❤</p>
-  <p class="lead">If you have questions or ideas to improve SSD, email me at: <a href="mailto:dev@conceptualspace.net">dev@conceptualspace.net</a></p>
-
+  <h2 class="mt-5">Simple Speed Dial has been updated!</h2>
 </main>
 
 </body>
