--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,8 @@
         <li class="menu-option" data-locale="edit" id="edit">Edit</li>
         <li class="menu-separator"></li>
         <li class="menu-option" data-locale="refresh" id="refresh">Refresh Thumbnails</li>
+        <li class="menu-separator"></li>
+        <li class="menu-option" data-locale="delete" id="delete">Delete</li>
     </ul>
 </div>
 
