--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
             <div id="importExportModalName"><strong>Import / Export Settings</strong><span class="close closeBtn">✕</span></div>
 
             <div class="formItem"><br/><label data-locale="importExport">
-                This will backup or restore SSD settings and thumbnails. Note, all speed dials are managed by the
+                This will backup or restore GSD settings and thumbnails. Note, all speed dials are managed by the
                 browser as bookmarks. Make sure they are backed up separately via the bookmarks manager or sync. WARNING:
                 Importing will replace your current settings.
             </label><br/><br/><span id="statusMessage"></span><br></div>
@@ -213,18 +213,6 @@
                         <option value="4">4</option>
                         <option value="3">3</option>
                     </select>
-                </div>
-            </div>
-
-            <div class='row' style="display:none">
-                <div class='column'>
-                    <label data-locale="largeTiles">Large Tiles</label>
-                </div>
-                <div class='column controls'>
-                    <label class="switch">
-                        <input checked class="settingsCtl" id="largeTiles" type="checkbox">
-                        <span class="slider round settingsCtl"></span>
-                    </label>
                 </div>
             </div>
             <div class='row'>
