prep for release

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,10 @@
 <body>
 <!-- new install -->
 <div class="default-content" id="noBookmarks">
-    <h1 class="default-content" data-locale="newInstall1">Get started with Simple Speed Dial</h1>
-    <p class="default-content helpText" data-locale="newInstall2">⭐ Add sites by clicking the button below, or add
-        bookmarks to the Speed Dial folder</p>
+    <h1 class="default-content" data-locale="newInstall1">Get started with Giddy's Speed Dial</h1>
+    <p class="default-content helpText" data-locale="newInstall2">⭐ Add bookmarks to the Speed Dial folder or sub-folders using the Bookmark function of your browser</p>
     <p class="default-content helpText" data-locale="newInstall3">✨ Dials can be modified by right-clicking on them</p>
-    <p class="default-content helpText" data-locale="newInstall4">💎 Access more settings by clicking the gear in the
-        top-right corner</p>
+    <p class="default-content helpText" data-locale="newInstall4">💎 Access more settings by clicking the gear in the top-right corner</p>
 </div>
 
 <!--
