--- a/src/updated.html
+++ b/src/updated.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Simple Speed Dial Updated!</title>
+  <title>Giddy's Speed Dial Updated!</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -44,7 +44,7 @@
 
 <!-- Begin page content -->
 <main role="main" class="container">
-  <h2 class="mt-5">Simple Speed Dial has been updated!</h2>
+  <h2 class="mt-5">Giddy's Speed Dial has been updated!</h2>
 </main>
 
 </body>
